--- a/.github/workflows/test-mux.yml
+++ b/.github/workflows/test-mux.yml
@@ -24,11 +24,11 @@ jobs:
 
       # Start each webhook-muxer instance
       - name: Start webhook-muxer instance 1
-        run: nohup bash -c "bundle exec ruby webhook-mux.rb --port 8000 &" && sleep 1
+        run: nohup bash -c "PORT=8000 bundle exec ruby webhook-mux.rb &" && sleep 1
       - name: Start webhook-muxer instance 2
-        run: nohup bash -c "bundle exec ruby webhook-mux.rb --port 8001 &" && sleep 1
+        run: nohup bash -c "PORT=8001 bundle exec ruby webhook-mux.rb &" && sleep 1
       - name: Start webhook-muxer instance 3
-        run: nohup bash -c "bundle exec ruby webhook-mux.rb --port 8002 &" && sleep 1
+        run: nohup bash -c "PORT=8002 bundle exec ruby webhook-mux.rb &" && sleep 1
 
       # Send a dummy webhook to each instance
       - name: Send dummy webhook
